--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "name": "shel/neos-norman-nodely",
   "license": "MIT",
   "require": {
-    "neos/neos": "^8.3"
+    "neos/neos": "^8.3 || ^9.0"
   },
   "autoload": {
     "psr-4": {
